Disp timer header and mail template
